--- a/po/tr.po
+++ b/po/tr.po
@@ -1,24 +1,26 @@
+# translation of yelp.HEAD.tr.po to Turkish
 # Turkish translation of yelp.
-# Copyright (C) 2002-2003 Free Software Foundation, Inc.
+# Copyright (C) 2002-2003, 2004 Free Software Foundation, Inc.
 # Görkem Çetin <gorkem@gelecek.com.tr>, 2002.
 # Arman Aksoy <armish@linux-sevenler.de>, 2003.
+# Baris Cicek <baris@teamforce.name.tr>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2003-12-29 00:08+0000\n"
-"Last-Translator: Arman Aksoy (Armish) <armish@linux-sevenler.de>\n"
+"Project-Id-Version: yelp.HEAD.tr\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-02-26 04:35+0100\n"
+"PO-Revision-Date: 2004-02-26 14:12+0200\n"
+"Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Uygulamalar"
+msgstr "Uygulamacıklar"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -94,7 +96,7 @@ msgstr "Sistem"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr "Yardımcı programlar"
+msgstr "Araçlar"
 
 #: data/toc.xml.in.h:21
 msgid "X Applications"
@@ -126,7 +128,7 @@ msgstr "_Önceki"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Satıra göre böl"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -138,7 +140,7 @@ msgstr "Yelp Üreticisi"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Yelp belgesinde hiç bir href özniteliği bulunamadı"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
@@ -159,31 +161,28 @@ msgid "Unknown"
 msgstr "Bilinmeyen"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "'%s' dökümanı yok"
+msgstr "Seçilen belge açılamadı"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "'%s' dökümanı yok"
+msgstr "Seçilen sayfa bu belge içerisinde bulunamadı."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
-msgstr ""
+msgstr "İçerik tablosu okunamadı."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML belgeleri artık desteklenmiyor."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "'%s' dökümanı yok"
+msgstr "Seçilen dosya okunamadı."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Hangi ön dizinin kullanılacağını belirleyin"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -257,20 +256,20 @@ msgstr "Sistem Yönetimi"
 
 #: src/yelp-pager.c:118
 msgid "Document URI"
-msgstr "Belge Adresi"
+msgstr "Belge URIsi"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "İşlenecek belgenin URIsi"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Bekletme sayımı negatif."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Yelp başlatılamadı: '%s'"
+msgstr "OMF dosyası '%s' yüklenemedi."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -278,7 +277,7 @@ msgstr "Kategoriler"
 
 #: src/yelp-toc-pager.c:906
 msgid "Documents"
-msgstr "Dökümanlar"
+msgstr "Belgeler"
 
 #: src/yelp-window.c:249
 msgid "/_File"
@@ -326,17 +325,15 @@ msgstr "/Git/_Başlangıç"
 
 #: src/yelp-window.c:278
 msgid "/Go/"
-msgstr "/_Git/"
+msgstr "/Git/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Git/Ö_nceki"
+msgstr "/Git/Ö_nceki Sayfa"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Git/_Sonraki"
+msgstr "/Git/_Sonraki Sayfa"
 
 #: src/yelp-window.c:285
 msgid "/Go/_Contents"
@@ -364,7 +361,7 @@ msgstr "Geri"
 
 #: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "Günlükte bulunan önceki sayfayı göster"
+msgstr "Geçmişte bulunan önceki sayfayı göster"
 
 #: src/yelp-window.c:636
 msgid "Forward"
@@ -372,7 +369,7 @@ msgstr "İleri"
 
 #: src/yelp-window.c:637
 msgid "Show next page in history"
-msgstr "Günlükte bulunan sonraki sayfayı göster"
+msgstr "Geçmişte bulunan sonraki sayfayı göster"
 
 #: src/yelp-window.c:649
 msgid "Home"
@@ -390,7 +387,7 @@ msgstr "Yükleniyor..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1300
 msgid "translator_credits"
-msgstr "Görkem Çetin"
+msgstr "Barış Çiçek"
 
 #: src/yelp-window.c:1305
 msgid "A Help Browser for GNOME"
@@ -398,162 +395,159 @@ msgstr "GNOME için bir yardım tarayıcı"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Bu Makale Hakkında"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Bu Bibliografya Hakkında"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Bu Kitap Hakkında"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Bu Bölüm Hakkında"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Bu Girdi Hakkında"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Bu Sözlük Hakkında"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Bu İndeks Hakkında"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Bu Bölüm Hakkında"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Bu Önsöz Hakkında"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Bu Referans Hakkında"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Bu Bölüm Hakkında"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Bu Küme Hakkında"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Uygulamalar"
+msgstr "Üyelikler"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Ekler"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Makale"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "İzleyici"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Yazar"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Yazarlar"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografya"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Kitap "
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Dikkat"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Bölüm"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Katkıda bulunan"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Katkıda bulunanlar"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Baskı bilgisi"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Tekif hakkı"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Telif hakları"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Tarih"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Bölüm"
+msgstr "Adama"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "Düzenleyiciler"
+msgstr "Düzenleyici"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Eposta"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Örnek"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Figür"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Sözlük"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Önemli"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -561,203 +555,113 @@ msgstr "İndeks"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Yasal Uyarı"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Seviye"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "İleti İzleyicisi"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "İleti Seviyesi"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "İleti Temeli"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Not"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Temel"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Diğer Katkı Sağlayan"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Diğer Katkı Sağlayanlar"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Bölüm"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Önsöz"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Yayımcı"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Yayımcılar"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Referans"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Referans Girdisi"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Referans Bölümü"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Referans Bilgisi"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Referans Geçmişi"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Bakın"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Ayrıca Bakın"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "İndeks"
+msgstr "İndeks Ayarla"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tablo"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Yardım İçeriği"
+msgstr "İçerik Tablosu"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Tüyo"
 
 #: stylesheets/l10n.xml.in.h:68
-#, fuzzy
 msgid "Title"
-msgstr "Başlık sayfası"
+msgstr "Başlık"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Uyarı"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME hakkında yardım"
+msgstr "GNOME ile Yardım Alın"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Yardım"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "'%s' dökümanı yok"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Metni dökümanda bul:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Otomatik olarak _kaydır"
-
-#~ msgid "Find text..."
-#~ msgstr "Metin bul..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Tüm kelimeyi _eşleştir"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Küçük/Büyük _duyarlı eşleştir"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Ara:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Masaüstü"
-
-#~ msgid "Additional documents"
-#~ msgstr "Ek dökümanlar"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Kılavuz Sayfaları"
-
-#~ msgid "Info Pages"
-#~ msgstr "Bilgi Sayfaları"
-
-#~ msgid "Manual pages"
-#~ msgstr "Kılavuz sayfaları"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME"
-
-#~ msgid "Free Software"
-#~ msgstr "Serbest Yazılım"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Yükleniyor..."
-
-#~ msgid "Search in the index"
-#~ msgstr "İndiste tara"
-
-#~ msgid "info"
-#~ msgstr "bilgi"
-
-#~ msgid "man"
-#~ msgstr "kılavuz"
-
-#~ msgid "Start page"
-#~ msgstr "Başlangıç sayfası"
-
-#~ msgid "Scrollkeeper docs for category"
-#~ msgstr "Kategorilerine göre Scrollkeeper belgeleri"
-
-#~ msgid "/File/_Quit"
-#~ msgstr "/Dosya/Çı_k"
-
-#~ msgid "<a href=\"toc:man\">Manual pages</a>: "
-#~ msgstr "<a href=\"toc:man\">Kılavuz sayfaları</a>: "
-
-#~ msgid "Manual page sections"
-#~ msgstr "Kılavuz sayfa bölümleri"
-
-#~ msgid "Go back in the history list"
-#~ msgstr "Geçmiş listesinde geri git"
-
-#~ msgid "Go forth in the history list"
-#~ msgstr "Geçmiş listesinde ileri git"
-
-#~ msgid "Overview of contents"
-#~ msgstr "İçindekiler"
-
-#~ msgid "Search for a phrase in the document"
-#~ msgstr "Belgede arama yap"
-
-#~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "Tüm belgelerde arama yapmak için bir sözcük girin"
