--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-01  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation from
+	  Roy Chan <roy.chan@linux.org.hk>.
+
 2004-02-29  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
