--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,101 +1,92 @@
 # Traditional Chinese translation of yelp.
-# Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 # Joe Man <trmetal@yahoo.com.hk>, 2002.
 # Abel Cheung <maddog@linux.org.hk>, 2002-2003.
+# Roy Chan <roy.chan@linux.org.hk>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.3.6\n"
-"POT-Creation-Date: 2004-02-24 18:22-0600\n"
-"PO-Revision-Date: 2003-08-29 20:17+0800\n"
-"Last-Translator: Abel Cheung <maddog@linux.org.hk>\n"
+"Project-Id-Version: yelp 2.5.6\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-01 06:48+0800\n"
+"PO-Revision-Date: 2004-03-01 16:03+0800\n"
+"Last-Translator: Roy Chan <roy.chan@linux.org.hk>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "程式"
+msgstr "面板程式"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "程式"
+msgstr "應用程式"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME ─ 桌面"
+msgstr "桌面"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "開發"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "開發"
+msgstr "開發環境"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "開發"
+msgstr "開發工具"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/編輯(_E)"
+msgstr "編輯器"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "程式"
+msgstr "教育程式"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "遊戲及娛樂"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "一般"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "說明文件"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "程式"
+msgstr "網際網路程式"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
 msgstr "內核"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "程式"
+msgstr "多媒體程式"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "辦公室應用程式"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "程式"
+msgstr "科研程式"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "保安"
 
 #: data/toc.xml.in.h:19
 #, fuzzy
@@ -104,12 +95,11 @@ msgstr "系統函式"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "公用程式"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "程式"
+msgstr "X 程式"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,15 +107,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "區分大小寫(_A)"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "搜尋"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "搜尋(_F)："
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,7 +127,7 @@ msgstr "上一個(_P)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "自動換行(_W)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -149,15 +139,15 @@ msgstr "Yelp 工廠"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "在 yelp:document 中找不到 href 屬性"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "記憶體不足"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "標題頁"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
@@ -167,35 +157,31 @@ msgstr "內容"
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "未知"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "文件‘%s’不存在"
+msgstr "無法開啟所選的文件"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "文件‘%s’不存在"
+msgstr "無法在這文件中找到所選的頁。"
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "文件‘%s’不存在"
+msgstr "無法讀取文件的目錄。"
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML 文件已不再被支援。"
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "文件‘%s’不存在"
+msgstr "無法讀取所選的檔案。"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr "指定使用哪個目錄作為暫存目錄"
+msgstr "指定使用哪個目錄作為快取目錄"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -249,11 +235,11 @@ msgstr "內核"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "硬件裝置"
+msgstr "硬體裝置"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "設定檔案"
+msgstr "組態檔"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -268,22 +254,22 @@ msgid "System Administration"
 msgstr "系統管理"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "文件"
+msgstr "文件 URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "準備處理的文件的 URI"
 
 #: src/yelp-toc-pager.c:266
+#, fuzzy
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: 暫停計數器值為負數"
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "無法啟動 Yelp：‘%s’"
+msgstr "無法載入 OMF 檔案‘%s’。"
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -310,19 +296,16 @@ msgid "/_Edit"
 msgstr "/編輯(_E)"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/編輯(E)/在頁面中搜尋(_F)..."
+msgstr "/編輯(E)/搜尋(_F)..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/編輯(E)/繼續搜尋(_F)"
+msgstr "/編輯(E)/繼續搜尋(_X)"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/編輯(E)/繼續搜尋(_F)"
+msgstr "/編輯(E)/繼續搜尋(_V)"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -341,24 +324,20 @@ msgid "/Go/_Home"
 msgstr "/前往(G)/首頁(_H)"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/前往(_G)"
+msgstr "/前往(_G)/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "上一個(_P)"
+msgstr "/前往(G)/上一頁(_P)"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/前往(G)/索引(_I)"
+msgstr "/前往(G)/下一頁(_N)"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "內容"
+msgstr "/前往(G)/內容(_C)"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -412,6 +391,7 @@ msgstr ""
 "i18n 程式中文化計劃\n"
 "http://i18n.linux.org.tw/\n"
 "\n"
+"Roy Chan <roy.chan@linux.org.hk>, 2004\n"
 "Abel Cheung <maddog@linux.org.hk>, 2002-03\n"
 "Joe Man <trmetal@yahoo.com.hk>, 2002"
 
@@ -421,73 +401,63 @@ msgstr "GNOME 說明文件瀏覽程式"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
-#, fuzzy
 msgid "About This Article"
 msgstr "關於這份文件"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "關於這參考書目錄"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Book"
-msgstr "關於這份文件"
+msgstr "關於這本書籍"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Chapter"
-msgstr "關於這份文件"
+msgstr "關於這一章"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Entry"
-msgstr "關於這份文件"
+msgstr "關於這個項目"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Glossary"
-msgstr "關於這份文件"
+msgstr "關於這份辭彙"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Index"
-msgstr "關於這份文件"
+msgstr "關於這份索引"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Part"
-msgstr "關於這份文件"
+msgstr "關於這部份"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Preface"
-msgstr "關於這份文件"
+msgstr "關於這篇序"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Reference"
-msgstr "關於這份文件"
+msgstr "關於這份參考"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Section"
-msgstr "關於這份文件"
+msgstr "關於這一節"
 
 #: stylesheets/l10n.xml.in.h:16
 #, fuzzy
@@ -495,99 +465,97 @@ msgid "About This Set"
 msgstr "關於這份文件"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "程式"
+msgstr "履歷"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "附錄"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "文章"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "讀者"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "作者"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "作者"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "參考書目錄"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "書籍"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "注意"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "章"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "協力者"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "協力者"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "末頁"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "版權所有"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "版權所有"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "日期"
 
 #: stylesheets/l10n.xml.in.h:34
 #, fuzzy
 msgid "Dedication"
-msgstr "章節"
+msgstr "呈獻"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/編輯(_E)"
+msgstr "編者"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "電郵"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "例子"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "圖"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "辭彙"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "重要"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -595,83 +563,84 @@ msgstr "索引"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "版權公告"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "階級"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "訊息聽眾"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "訊息階級"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "訊息來源"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "備註"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "來源"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "其他貢獻者"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "其他貢獻者"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "部"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "序"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "出版者"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "出版者"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "參考"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "參考項目"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "參考章節"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "發行資訊"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "版本歷史"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "參考"
 
+#. or "或參考"? -- Abel
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "請參考"
 
 #: stylesheets/l10n.xml.in.h:64
 #, fuzzy
@@ -680,24 +649,23 @@ msgstr "索引"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "表格"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "說明文件"
+msgstr "目錄"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "提示"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "標題"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "警告"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -750,11 +718,7 @@ msgstr "說明文件瀏覽器"
 #~ msgstr "自由軟體"
 
 #~ msgid "(C)"
-#~ msgstr "版權所有 ©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "載入..."
+#~ msgstr "版權所有 (c)"
 
 #~ msgid "Previous"
 #~ msgstr "上一頁"
