--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-06  Mətin Əmirov  <metin@karegen.com>
+
+	* az.po: Translation updated.
+
 2004-03-04  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Updated Finnish translation from Lauri Nurmi.
